--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat&display=swap"
       rel="stylesheet"
     />
-    <title>Pokédex</title>
+    <title>Pokedex</title>
   </head>
   <body>
     <div id="app"></div>
